some more meanup and apires hookup